fix layout problem

--- a/assets/css/questionnaire.css
+++ b/assets/css/questionnaire.css
@@ -38,6 +38,9 @@ body{
 .question-row{
     height:35vh;
 }
+.end-row{
+    height:25vh;
+}
 
 .question{
     background: #ebf1fa;
@@ -47,6 +50,14 @@ body{
     font-family: "Helvetica Neue";
     color: #2A383D;
 }
+.info{
+    background: #ebf1fa;
+    font-size: 35pt;
+    text-align: center;
+    font-family: "Helvetica Neue";
+    color: #2A383D;
+}
+
 
 .button-row{
     background: #ebf1fa; /* Old browsers */
@@ -157,4 +168,29 @@ body{
     text-align: right;
     padding-right:0px;
     padding-top:12pt;
+}
+.image1
+{
+    width:70px;
+    height:70px;
+    display: inline-block;
+    position: relative;
+
+
+}
+.image2
+{
+    width:90px;
+    height:50px;
+    display: inline-block;
+    position: relative;
+
+}
+.image3
+{
+    width:140px;
+    height:35px;
+    display: inline-block;
+    position: relative;
+
 }
